[package]
name = "bottomless"
version = "0.1.2"
edition = "2021"
license = "MIT"
keywords = ["libsql", "sqlite", "s3", "vfs", "replication"]
repository = "https://github.com/psarna/bottomless"
description = "Bottomless VFS"

[dependencies]
anyhow = "1.0.66"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
bytes = "1.3.0"
mac_address = "1.1.4"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v1", "rng"] }

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = false
lto = true
opt-level = "s"
panic = "abort"
