[package]
name = "bottomless-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
chrono = "0.4.23"
clap = "4.0.29"
tokio = { version = "1.23.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.2.2", features = ["v7"] }
