[package]
name = "bottomless-cli"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["libsql", "sqlite", "s3", "cli", "replication"]
repository = "https://github.com/psarna/bottomless"
description = "Command-line interface for bottomless replication for libSQL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
bottomless = { version = "0", path = "../core" }
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v7"] }
