[package]
name = "bottomless"
version = "0.1.10"
edition = "2021"
license = "MIT"
keywords = ["libsql", "sqlite", "s3", "wal", "replication"]
repository = "https://github.com/libsql/bottomless"
description = "Bottomless replication for libSQL"

[dependencies]
anyhow = "1.0.66"
async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
bytes = "1.3.0"
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v7"] }

[lib]
crate-type = ["rlib", "staticlib"]
