[package]
name = "bottomless"
version = "0.1.12"
edition = "2021"
license = "MIT"
keywords = ["libsql", "sqlite", "s3", "wal", "replication"]
repository = "https://github.com/libsql/bottomless"
description = "Bottomless replication for libSQL"

[dependencies]
anyhow = "1.0.66"
attohttpc = { version = "0.19", default-features = false, features = ["tls-rustls"] }
byteorder = "1.4.3"
bytes = "1.3.0"
crc = "3.0.0"
flate2 = "1.0.25"
futures = "0.3.25"
getrandom = { version = "0.2.8", features = ["js"] }
rust-s3 = { version = "0.32.3", default-features = false, features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v7"] }

[features]
libsql_linked_statically = []

[lib]
crate-type = ["rlib", "staticlib"]
