[package]
name = "bottomless"
version = "0.1.12"
edition = "2021"
license = "MIT"
keywords = ["libsql", "sqlite", "s3", "wal", "replication"]
repository = "https://github.com/libsql/bottomless"
description = "Bottomless replication for libSQL"

[dependencies]
anyhow = "1.0.66"
byteorder = { version = "1.4.3", optional = true }
async-compression = { version = "0.3.15", features = ["tokio", "gzip"], optional = true }
attohttpc = { version = "0.19", default-features = false, features = ["tls-rustls"], optional = true }
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
bytes = "1.3.0"
crc = "3.0.0"
flate2 = { version = "1.0.25", optional = true }
futures = { version = "0.3.25", optional = true }
getrandom = { version = "0.2.8", features = ["js"], optional = true }
rust-s3 = { version = "0.32.3", default-features = false, features = ["sync"], optional = true }
tokio = { version = "1.22.0", features = ["full"], optional = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v7"] }

[features]
default = ["async"]
libsql_linked_statically = []
async = ["async-compression", "futures", "tokio"]
sync = ["attohttpc", "byteorder", "flate2", "getrandom", "rust-s3"]

[lib]
crate-type = ["rlib", "staticlib"]
